修改首頁經典系列圖片排版

--- a/app/assets/style/page/_home.scss
+++ b/app/assets/style/page/_home.scss
@@ -98,6 +98,7 @@
         margin: 0 -12px;
         @include RWD($lg){
             flex-direction: column;
+            align-items: center;
         }
     }
     &_item{
@@ -105,15 +106,17 @@
         width: 33.333%;
         padding: 0 12px;
         @include RWD($lg){
+            width: 50%; 
+        }
+        @include RWD($md){
             width: 100%;
         }
-        
         // &_img{
         //     @include RWD($lg){
         //         max-width: 336px;
         //     }
         //     @include RWD($md){
-        //         max-width: 348px;
+        //         max-width: 100%;
         //     }
         // }
         &_link{
